tests/typecheck/should_fail/T13981C.hs
{-# LANGUAGE TypeFamilies #-}
module T13981C where
import {-# SOURCE #-} T13981A
import T13981F
type instance F T = Bool
